package gameLaby.laby;

public class Dague extends Arme{


    public Dague(int x, int y) {
        super(x, y, 2);
    }

    public String toString() {
        return "C'est une dague";
    }
}
