package gameLaby.laby;

public class Epee extends Arme {

    public Epee(int dx, int dy) {
        super(dx, dy, 3);
    }

    public String toString() {
        return "C'est une epee";
    }
}
