package gameLaby.laby;

public class Monstre extends Entite {

    public Monstre(int dx, int dy) {
        super(dx, dy, 10, 2);
    }
}
