package gameLaby.laby;

public class ObjetRamassable extends Position{


    public ObjetRamassable(int x, int y){
        super(x, y);
    }

    public int getDegats(){
        return 0;
    }
}
