package gameLaby.laby;

public class Potion extends ObjetRamassable {

    public Potion(int dx, int dy) {
        super(dx, dy);
    }

    public String toString() {
        return "C'est une potion";
    }
}
